<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlna_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="316dip"
        android:layout_height="180dip"
        android:layout_centerInParent="true"
        android:background="@drawable/dlna_search_layout_bg"
        android:orientation="vertical"
        android:padding="15dip" >

        <Button
            android:id="@+id/search_btn"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="15dip"
            android:background="@drawable/dlna_search_btn"
            android:text="@string/dlna_search_txt"
            android:textColor="#323232"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:background="@drawable/dlna_cancel_txt_btn"
            android:text="@string/cancel_txt"
            android:textColor="#6e6e6e"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/help_list"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:textColor="#84C1FF"
            android:paddingTop="10dp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:autoLink="all"
            android:text="@string/help_list"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dlna_searching_layout_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dip"
         android:visibility="gone" 
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_no_result" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_result_layout"
        android:layout_width="316dip"
        android:layout_height="180dip"
        android:layout_centerInParent="true"
        android:background="@drawable/dlna_search_layout_bg"
        android:orientation="vertical"
        android:padding="15dip"
        android:visibility="gone" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:gravity="center_horizontal"
            android:text="@string/device_hint"
            android:textColor="#6e6e6e"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/result_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/rcmd_list_divider"
            android:fadingEdge="none"
            android:listSelector="@null"
            android:scrollbars="none"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searching_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dlna_searching_layout_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_hint" />

        <ProgressBar
            style="@style/base_large_progressbar_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip" />
    </LinearLayout>

</RelativeLayout>