<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/controller_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <!-- framelayout 注意避免控件覆盖，导致无法响应所属控件的事件 -->
	<!-- 引导蒙版 -->
    <include
        android:id="@+id/first_touch_id_ref"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/first_touch_guide" />
	<!-- 手势区域 -->
    <RelativeLayout
        android:id="@+id/gesture_vis"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gesture_gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >
    </RelativeLayout>
    	<!-- 手势操作提示区 -->
    <RelativeLayout
        android:id="@+id/gesturelayout"
        android:layout_width="wrap_content"
        android:layout_height="120dip"
        android:layout_gravity="center"
        android:background="@drawable/mainpage_more_btn_normalnew"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/gesturelayout_iv_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/gesture_middle_light"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dip"
            android:textColor="@color/c_white"
            android:textSize="@dimen/emergency_story_title_txtsize" />
    </RelativeLayout>

	<!-- 标题栏，顶部 -->
    <RelativeLayout
        android:id="@+id/np_l_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/player_title_bg" >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/new_back"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:text="@string/player_back"
            android:textColor="@color/player_title_color" />

        <LinearLayout
            android:id="@+id/power_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="5dip" >

            <ImageView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:textColor="@color/c_white"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/live_tv_err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/power_time_layout"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/player_more"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/live_tv_err"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/player_share"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/share"
            android:background="@drawable/play_err_bg"
            android:text="@string/report_error"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/crack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_error"
            android:background="@drawable/standard_def"
            android:contentDescription="@string/app_name"
            android:visibility="gone" />

        <TextView
            android:id="@+id/np_live_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/crack"
            android:layout_toRightOf="@id/btn_back"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/player_title_color"
            android:textIsSelectable="true"
            android:textSize="16sp" />
    </RelativeLayout>

	<!-- 控制栏（直播和点播），底部 -->
    <ViewStub
        android:id="@+id/controller_live_stub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout="@layout/live_hd_controller"
        android:visibility="gone" />

    <ViewStub
        android:id="@+id/controller_vod_stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout="@layout/vod_hd_controller" />

    <!-- 锁定按钮 -->

    <ImageButton
        android:id="@+id/lock_big"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="40dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/liveplaye_bigr_unlock"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/np_l_top_layout_rel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- 视频顶部标题栏 -->

        <RelativeLayout
            android:id="@+id/sourcelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#7F000000"
            android:visibility="gone" >

            <TextView
                android:id="@+id/sourceurl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingLeft="5dp"
                android:textColor="@color/c_white" />

            <TextView
                android:id="@+id/sourceurlbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:paddingRight="5dp"
                android:text="@string/source_page"
                android:textColor="#f67979" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/crack_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="top|right"
            android:layout_marginRight="100dip"
            android:layout_marginTop="45dip"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/crack_top"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/np_share_text_bg"
                android:contentDescription="@string/app_name"
                android:src="@drawable/standard_def" />

            <ImageButton
                android:id="@+id/crack_middle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/np_share_text_bg"
                android:contentDescription="@string/app_name"
                android:src="@drawable/high_false" />

            <ImageButton
                android:id="@+id/crack_bottom"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/np_share_text_bg"
                android:contentDescription="@string/app_name"
                android:src="@drawable/super_false" />
        </LinearLayout>
    </RelativeLayout>



    <ListView
        android:id="@+id/list_err"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="74dp"
        android:layout_marginTop="16dp"
        android:divider="@null"
        android:listSelector="@null"
        android:visibility="gone" >
    </ListView>

    <ListView
        android:id="@+id/list_live"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:divider="@null"
        android:listSelector="@null"
        android:visibility="gone" >
    </ListView>

</FrameLayout>